package com.lucifer.A02_SimpleFactory.pizza;

import com.lucifer.A02_SimpleFactory.origin.order.OrderPizza;

public class PizzaStore {
    public static void main(String[] args) {
        OrderPizza orderPizza = new OrderPizza();
        new OrderPizza();

    }
}
